# Epoch

./: 404.html  CMakeLists.txt  README.md  build.bat  build.sh  index.html  sitemap.xml
.github/workflows/: ci.yml
API-reference/: index.html
contributing/: index.html
core-concepts/: index.html
docs/: README.md  mkdocs.yml
docs/docs/: index.md
docs/docs/index/: index.md  tags.md
engine_resources/materials/: default.mat  unlit.mat
engine_resources/models/: plane.fbx  sphere.fbx  sphere.mtl
engine_resources/shaders/fb/: blend.frag  framebuffer.frag  framebuffer.vert
engine_resources/shaders/mesh/: default.frag  lit.frag  lit.vert  unlit.frag  unlit.vert
engine_resources/shaders/shadows/: shadow_dir.frag  shadow_point.frag  shadow_point.vert  shadow_spot.frag  shadow_spot.vert
engine_resources/shaders/text/: text.frag  text.vert
index/: index.html
index/getting-started/: index.html
index/tags/: index.html
modules/: index.html
project_resources/: level1.lvl  sponza.lvl
project_resources/materials/: Material_298.mat  Material_57.mat  Material__25.mat  Material__47.mat  arch.mat  bricks.mat  ceiling.mat  chain.mat  column_a.mat  column_b.mat  column_c.mat  details.mat  fabric_a.mat  fabric_c.mat  fabric_d.mat  fabric_e.mat  fabric_f.mat  fabric_g.mat  flagpole.mat  floor.mat  leaf.mat  lit_mat1.mat  normal_test.mat  roof.mat  rubik.mat  vase.mat  vase_hanging.mat  vase_round.mat
project_resources/models/: Rubik_Cube.fbx  cube.fbx  plane.fbx  rubik's cube.fbx  sphere.fbx
project_resources/shaders/: lit.frag
resources/models/: sphere.mtl
resources/shaders/fb/: blend.frag  framebuffer.frag
resources/shaders/mesh/: default.frag  default.vert
search/: search_index.json
src/editor/: editor_module.cpp
src/engine/audio/: audioID.cpp  audioID.hpp  audio_manager.cpp  audio_manager.hpp
src/engine/core/: engine.cpp  engine.hpp
src/engine/core/resources/: resources_manager.cpp  resources_manager.hpp
src/engine/debugging/: debugger.cpp  debugger.hpp
src/engine/ecs/: objectID.cpp  objectID.hpp
src/engine/ecs/components/: audio_source.cpp  audio_source.hpp  component.cpp  component.hpp  light_component.cpp  light_component.hpp  model_component.cpp  model_component.hpp  physics_component.cpp  physics_component.hpp  transform.cpp  transform.hpp
src/engine/ecs/components/audio/: audio_source.cpp  audio_source.hpp
src/engine/ecs/components/core/: component.cpp  component.hpp  component_macros.hpp  component_registry.cpp  component_registry.hpp  dll_component_macros.hpp  dll_component_registration.hpp  script.cpp  script.hpp  transform.cpp  transform.hpp
src/engine/ecs/components/core/registry/: component_registry.cpp  component_registry.hpp  dll_component_macros.hpp  dll_component_registration.hpp
src/engine/ecs/components/physics/: physics_body.cpp  physics_body.hpp
src/engine/ecs/components/rendering/: camera.cpp  camera.hpp  light_component.cpp  light_component.hpp  model_component.cpp  model_component.hpp
src/engine/ecs/objects/: object.cpp  object.hpp
src/engine/ecs/objects/actors/: actor.cpp  actor.hpp
src/engine/events/: event_system.cpp  event_system.hpp
src/engine/filesystem/: assetID.cpp  assetID.hpp  filesystem.cpp  filesystem.hpp
src/engine/filesystem/packer/: common.hpp  packer.hpp  unpacker.hpp
src/engine/input/: input_manager.hpp  keys.hpp
src/engine/inputs/: input_manager.cpp  input_manager.hpp  keys.hpp
src/engine/levels/: level.cpp  level.hpp  level_manager.cpp  level_manager.hpp
src/engine/physics/: physics_system.cpp  physics_system.hpp
src/engine/rendering/: utils.hpp
src/engine/rendering/camera/: camera.cpp  camera.hpp  camera_manager.cpp  camera_manager.hpp
src/engine/rendering/debug/: debug.cpp  debug.hpp
src/engine/rendering/framebuffer/: framebuffer.cpp  framebuffer.hpp
src/engine/rendering/light/: light_manager.cpp  light_manager.hpp
src/engine/rendering/material/: material.cpp  material.hpp
src/engine/rendering/mesh/: mesh.cpp  mesh.hpp
src/engine/rendering/renderer/: renderer.cpp  renderer.hpp
src/engine/rendering/shader/: shader.cpp  shader.hpp
src/engine/rendering/shadow/: shadow_manager.cpp  shadow_manager.hpp
src/engine/rendering/texture/: texture.cpp  texture.hpp
src/engine/rendering/ui/: font.cpp  font.hpp  text.cpp  text.hpp
src/engine/serialization/level/: level_serializer.cpp  level_serializer.hpp
src/engine/serialization/material/: material_serializer.cpp  material_serializer.hpp
src/engine/time/: time_manager.hpp
src/game/: character.cpp  character.hpp  game_module.cpp  main.cpp
src/launcher/: main.cpp  module_loader.hpp
stylesheets/: extra.css
tutorials/: index.html
